--- a/Enfoca/Features/TagSelection.storyboard
+++ b/Enfoca/Features/TagSelection.storyboard
@@ -18,28 +18,28 @@
                         <viewControllerLayoutGuide type="bottom" id="YrD-6e-jRP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="E8V-fH-HEr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="khl-B3-aHO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hkd-EH-5Uh">
-                                    <size key="itemSize" width="100" height="96"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="4" minimumInteritemSpacing="4" id="hkd-EH-5Uh">
+                                    <size key="itemSize" width="116" height="116"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="4" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TagCollectionViewCellId" reuseIdentifier="TagCollectionViewCellId" id="FIV-Lc-5Qd" customClass="TagCollectionViewCell" customModule="Enfoca" customModuleProvider="target">
-                                        <rect key="frame" x="4" y="2" width="100" height="96"/>
+                                        <rect key="frame" x="4" y="8" width="116" height="116"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="96"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="116" height="116"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One word" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8I-1u-kWm">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="96"/>
+                                                    <rect key="frame" x="4" y="4" width="108" height="108"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -48,11 +48,12 @@
                                         </view>
                                         <color key="backgroundColor" red="0.6386070251" green="0.80702608819999999" blue="0.64577037100000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="k8I-1u-kWm" firstAttribute="width" secondItem="FIV-Lc-5Qd" secondAttribute="width" id="7WZ-sf-P8I"/>
-                                            <constraint firstItem="k8I-1u-kWm" firstAttribute="centerY" secondItem="FIV-Lc-5Qd" secondAttribute="centerY" id="fjh-Ih-WjI"/>
-                                            <constraint firstItem="k8I-1u-kWm" firstAttribute="centerX" secondItem="FIV-Lc-5Qd" secondAttribute="centerX" id="m5x-eh-vDd"/>
-                                            <constraint firstItem="k8I-1u-kWm" firstAttribute="height" secondItem="FIV-Lc-5Qd" secondAttribute="height" id="myu-w3-pFb"/>
+                                            <constraint firstItem="k8I-1u-kWm" firstAttribute="leading" secondItem="FIV-Lc-5Qd" secondAttribute="leading" constant="4" id="DOz-4g-Tb3"/>
+                                            <constraint firstAttribute="bottom" secondItem="k8I-1u-kWm" secondAttribute="bottom" constant="4" id="Ijg-hE-XMi"/>
+                                            <constraint firstItem="k8I-1u-kWm" firstAttribute="top" secondItem="FIV-Lc-5Qd" secondAttribute="top" constant="4" id="Qj1-Oh-fKx"/>
+                                            <constraint firstAttribute="trailing" secondItem="k8I-1u-kWm" secondAttribute="trailing" constant="4" id="TsJ-eM-TAs"/>
                                         </constraints>
+                                        <size key="customSize" width="116" height="116"/>
                                         <connections>
                                             <outlet property="titleLabel" destination="k8I-1u-kWm" id="eub-To-X2z"/>
                                         </connections>
@@ -74,7 +75,7 @@
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="375" height="100"/>
+                    <size key="freeformSize" width="375" height="132"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LEO-QL-KBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
