--- a/Enfoca/Features/Home/Home.storyboard
+++ b/Enfoca/Features/Home/Home.storyboard
@@ -209,7 +209,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-4" y="51"/>
+            <point key="canvasLocation" x="-4" y="50.824587706146929"/>
         </scene>
         <!--Browse-->
         <scene sceneID="3oK-Vn-0dc">
